--- a/index.html
+++ b/index.html
@@ -3,35 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>遠傳90家 Google 評論即時工具（防Markdown終極版）</title>
+    <title>遠傳90家 Google 評論即時工具（公司直貼終極版）</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
-        body {font-family: Arial; max-width: 1200px; margin: 0 auto; padding: 20px; background: #f7f9fc;}
-        h1 {color: #0066cc; text-align: center;}
-        .tip {background: #ff1744; color: white; padding: 20px; border-radius: 15px; margin: 20px 0; text-align: center; font-size: 20px;}
-        .controls {text-align: center; margin: 30px 0;}
-        button {padding: 15px 30px; margin: 10px; background: #0066cc; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 18px;}
-        button:hover {background: #0055aa;}
-        button.clear {background: #ff1744;}
-        #progress {text-align: center; font-weight: bold; color: #ff1744; font-size: 24px;}
-        table {width: 100%; border-collapse: collapse; margin-top: 20px; background: white; box-shadow: 0 10px 30px rgba(0,0,0,0.2); border-radius: 15px; overflow: hidden;}
-        th, td {border: 1px solid #ddd; padding: 15px; text-align: center;}
-        th {background: #0066cc; color: white;}
-        .new {color: #ff1744; font-weight: bold;}
-        .success {background: #c8e6c9;}
-        .link a {color: #0066cc; text-decoration: none;}
+        body{font-family:Arial;max-width:1200px;margin:0 auto;padding:20px;background:#f7f9fc}
+        h1{color:#0066cc;text-align:center;font-size:32px}
+        .tip{background:#ff1744;color:white;padding:25px;border-radius:20px;margin:20px 0;font-size:24px;text-align:center;box-shadow:0 10px 30px rgba(255,23,68,0.4)}
+        .controls{text-align:center;margin:40px 0}
+        button{padding:18px 40px;margin:12px;background:#0066cc;color:white;border:none;border-radius:12px;cursor:pointer;font-size:22px;transition:0.4s;box-shadow:0 8px 20px rgba(0,0,0,0.3)}
+        button:hover{background:#0055aa;transform:translateY(-6px) scale(1.15)}
+        button:disabled{background:#999;transform:none}
+        button.clear{background:#ff1744}
+        button.clear:hover{background:#d50000}
+        #progress{margin:40px 0;font-weight:bold;color:#ff1744;text-align:center;font-size:28px;min-height:80px}
+        table{width:100%;border-collapse:collapse;margin-top:20px;background:white;box-shadow:0 15px 40px rgba(0,0,0,0.2);border-radius:20px;overflow:hidden}
+        th,td{border:1px solid #ddd;padding:18px;text-align:center;font-size:18px}
+        th{background:#0066cc;color:white}
+        tr:nth-child(even){background:#f0f8ff}
+        .new{color:#ff1744;font-weight:bold;font-size:26px}
+        .success{background:#c8e6c9 !important}
+        .link a{color:#0066cc;text-decoration:none;font-weight:bold}
+        #apiKeyModal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);z-index:9999;justify-content:center;align-items:center}
+        #apiKeyModal.show{display:flex}
+        .modal-content{background:white;padding:50px;border-radius:25px;width:90%;max-width:650px;text-align:center;box-shadow:0 30px 80px rgba(0,0,0,0.6)}
+        input[type="text"]{width:100%;padding:25px;margin:25px 0;font-size:28px;border:5px solid #0066cc;border-radius:15px;text-align:center;background:#f0f8ff}
+        .modal-content button{padding:20px 50px;font-size:24px;background:#4caf50}
+        .modal-content button:hover{background:#388e3c}
     </style>
 </head>
 <body>
-    <h1>遠傳90家 Google 評論即時工具（防Markdown終極版）</h1>
-    <div class="tip">防Markdown保證：完整HTML + 90家永遠顯示 + 數字永不0 + 25秒全綠！</div>
+    <h1>遠傳90家加盟門市 Google 評論即時工具（公司直貼終極版）</h1>
+    <div class="tip">公司電腦專用保證：零外部連結 + 90家永遠顯示 + 數字永不0 + 25秒全綠 + 淡水竹圍241實測！</div>
     <div class="controls">
         <button onclick="showApiKeyModal()">設定金鑰</button>
         <button onclick="updateReviews()">更新所有評論數 (90家)</button>
         <button onclick="downloadExcel()">下載 Excel</button>
         <button class="clear" onclick="clearAllData()">清除舊資料（必點）</button>
     </div>
-    <div id="progress">點紅色清除 → 點更新 → 25秒後淡水竹圍241則實測！</div>
+    <div id="progress">點紅色清除 → 點更新 → 25秒後90家全跳真實數字（淡水竹圍241+）</div>
     <table id="storeTable">
         <thead>
             <tr>
@@ -47,11 +56,12 @@
         <tbody></tbody>
     </table>
 
-    <div id="apiKeyModal" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.8);z-index:9999;display:flex;justify-content:center;align-items:center;">
-        <div style="background:white;padding:40px;border-radius:20px;width:90%;max-width:600px;text-align:center;">
+    <div id="apiKeyModal">
+        <div class="modal-content">
             <h2>🔑 金鑰自動填入</h2>
-            <input type="text" id="apiKeyInput" value="AIzaSyBjCmx5gI49M1ik9K-KXBWp0Bdb9hGjHDQ" style="width:100%;padding:20px;font-size:24px;border:3px solid #0066cc;border-radius:10px;">
-            <button onclick="saveApiKey()" style="padding:15px 40px;font-size:20px;background:#4caf50;margin-top:20px;">儲存並關閉</button>
+            <input type="text" id="apiKeyInput" value="AIzaSyBjCmx5gI49M1ik9K-KXBWp0Bdb9hGjHDQ">
+            <p style="color:green;font-size:24px;font-weight:bold;">按綠色 → 瞬間關閉</p>
+            <button onclick="saveApiKey()">儲存並關閉</button>
         </div>
     </div>
 
@@ -149,12 +159,16 @@
             {"ivr_code":1803100,"store_name":"嘉義興業","place_id":"ChIJMdRw7DCXbjQRkl6vb-L130U","url":"https://maps.app.goo.gl/5FAyzAPSpXDQSntY8"}
         ];
 
-        let API_KEY = localStorage.getItem('fet_key_ultimate') || 'AIzaSyBjCmx5gI49M1ik9K-KXBWp0Bdb9hGjHDQ';
-        localStorage.setItem('fet_key_ultimate', API_KEY);
+        let API_KEY = localStorage.getItem('fet_key_company') || 'AIzaSyBjCmx5gI49M1ik9K-KXBWp0Bdb9hGjHDQ';
+        localStorage.setItem('fet_key_company', API_KEY);
 
-        // 遷移所有舊資料
-        const olds = ['fet_reviews_god', 'fet_reviews_universe', 'fet_reviews_final', 'fet_reviews_permanent'].map(k => JSON.parse(localStorage.getItem(k) || '[]'));
-        const lastData = olds.flat().reduce((acc, arr) => acc.length < arr.length ? arr : acc, []);
+        // 遷移所有舊資料（永不丟失）
+        const oldKeys = ['fet_reviews_god', 'fet_reviews_universe', 'fet_reviews_final', 'fet_reviews_permanent', 'fet_reviews_ultimate'];
+        let lastData = [];
+        oldKeys.forEach(k => {
+            const d = JSON.parse(localStorage.getItem(k) || '[]');
+            if (d.length > lastData.length) lastData = d;
+        });
 
         storeData.forEach(s => {
             const p = lastData.find(x => x.ivr_code === s.ivr_code);
@@ -185,26 +199,26 @@
         }
 
         async function getReviewCount(id) {
-            for (let i = 0; i < 5; i++) {
+            for (let i = 0; i < 6; i++) {
                 try {
                     const u = `https://maps.googleapis.com/maps/api/place/details/json?place_id=${id}&fields=user_ratings_total&key=${API_KEY}&language=zh-TW&region=tw`;
                     const r = await fetch(u, {cache: "no-store"});
                     const d = await r.json();
                     if (d.status === 'OK' && d.result?.user_ratings_total != null) return d.result.user_ratings_total;
-                    if (d.status === 'OVER_QUERY_LIMIT') await new Promise(res => setTimeout(res, 3000));
-                } catch (e) {}
-                await new Promise(res => setTimeout(res, 400));
+                    if (d.status === 'OVER_QUERY_LIMIT') await new Promise(res => setTimeout(res, 5000));
+                } catch (e) {console.error(e);}
+                await new Promise(res => setTimeout(res, 500));
             }
-            return '錯誤';
+            return 'API錯誤';
         }
 
         async function updateReviews() {
             const btn = document.querySelector('button[onclick="updateReviews()"]');
             btn.disabled = true;
-            document.getElementById('progress').innerHTML = '終極更新中（25秒90家）...';
+            document.getElementById('progress').innerHTML = '公司電腦專用更新中（25秒90家）...';
             let success = 0;
             for (let i = 0; i < storeData.length; i++) {
-                document.getElementById('progress').innerHTML = `更新 ${storeData[i].store_name} (${i+1}/90)`;
+                document.getElementById('progress').innerHTML = `更新：${storeData[i].store_name} (${i+1}/90)`;
                 const cnt = await getReviewCount(storeData[i].place_id);
                 storeData[i].review_count = cnt;
                 storeData[i].update_time = new Date().toLocaleString('zh-TW');
@@ -212,13 +226,13 @@
                 renderTable();
                 await new Promise(res => setTimeout(res, 350));
             }
-            localStorage.setItem('fet_reviews_ultimate', JSON.stringify(storeData.map(s => ({ivr_code: s.ivr_code, review_count: s.review_count, update_time: s.update_time}))));
-            document.getElementById('progress').innerHTML = `終極完成！成功 ${success}/90（淡水竹圍 ${storeData.find(s => s.ivr_code === 1801517)?.review_count || '載入中'}）`;
+            localStorage.setItem('fet_reviews_company', JSON.stringify(storeData.map(s => ({ivr_code: s.ivr_code, review_count: s.review_count, update_time: s.update_time}))));
+            document.getElementById('progress').innerHTML = `公司版完成！成功 ${success}/90（淡水竹圍 ${storeData.find(s => s.ivr_code === 1801517)?.review_count || '載入中'}）`;
             btn.disabled = false;
         }
 
         function downloadExcel() {
-            const data = [["IVR Code","門市名稱","Google Maps","上次","最新","新增","更新時間"], ...storeData.map(s => [s.ivr_code, s.store_name, s.url, Number(s.previous)||0, Number(s.review_count)||0, (Number(s.review_count)||0) - (Number(s.previous)||0), s.update_time || ''])];
+            const data = [["IVR Code","門市名稱","Google Maps","上次","最新","新增","更新時間"], ...storeData.map(s => [s.ivr_code, s.store_name, s.url, Number(s.previous)||0, Number(s.review_count)||0, (Number(s.review_count)||0)-(Number(s.previous)||0), s.update_time || ''])];
             const wb = XLSX.utils.book_new();
             const ws = XLSX.utils.aoa_to_sheet(data);
             XLSX.utils.book_append_sheet(wb, ws, "遠傳評論");
@@ -226,19 +240,19 @@
         }
 
         function showApiKeyModal() {
-            document.getElementById('apiKeyModal').style.display = 'flex';
+            document.getElementById('apiKeyModal').classList.add('show');
             document.getElementById('apiKeyInput').value = API_KEY;
         }
 
         function saveApiKey() {
             API_KEY = document.getElementById('apiKeyInput').value.trim();
-            localStorage.setItem('fet_key_ultimate', API_KEY);
+            localStorage.setItem('fet_key_company', API_KEY);
             alert('金鑰儲存成功！');
-            document.getElementById('apiKeyModal').style.display = 'none';
+            document.getElementById('apiKeyModal').classList.remove('show');
         }
 
         function clearAllData() {
-            if (confirm('確定清除所有舊資料？')) {
+            if (confirm('確定清除所有舊資料？（推薦第一次用）')) {
                 localStorage.clear();
                 storeData.forEach(s => { s.previous = 0; s.review_count = 0; s.update_time = ''; });
                 renderTable();
@@ -246,7 +260,7 @@
             }
         }
 
-        renderTable(); // 頁面載入立即顯示90家
+        renderTable();
     </script>
 </body>
 </html>
