--- a/index.html
+++ b/index.html
@@ -1,44 +1,50 @@
-import json
 
-# Load the store list with reviews from the JSON file
-with open("store_list_with_reviews.json", "r", encoding="utf-8") as f:
-    store_data = json.load(f)
-
-# Generate the index.html content
-html_content = f"""
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
   <title>遠傳加盟門市評論工具</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xsx.full.min.js</script>
   <style>
-    body {{
+    body {
       font-family: Arial, sans-serif;
       margin: 20px;
-    }}
-    table {{
+    }
+    h1 {
+      color: #d32f2f;
+    }
+    button {
+      margin: 10px 5px;
+      padding: 10px 20px;
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #1565c0;
+    }
+    table {
       border-collapse: collapse;
       width: 100%;
-    }}
-    th, td {{
+      margin-top: 20px;
+    }
+    th, td {
       border: 1px solid #ccc;
       padding: 8px;
       text-align: center;
-    }}
-    th {{
+    }
+    th {
       background-color: #f2f2f2;
-    }}
-    button {{
-      margin-right: 10px;
-      padding: 10px 20px;
-    }}
+    }
   </style>
 </head>
 <body>
   <h1>遠傳加盟門市評論工具</h1>
   <button onclick="updateReviews()">更新評論數</button>
   <button onclick="downloadReport()">下載報表</button>
+
   <table id="storeTable">
     <tr>
       <th>IVR Code</th>
@@ -50,31 +56,17 @@ html_content = f"""
 
   <script>
     const apiKey = "AIzaSyBjCmx5gI49M1ik9K-KXBWp0Bdb9hGjHDQ";
-    let storeData = {json.dumps(store_data, ensure_ascii=False)};
+    let storeData = [];
 
-    function renderTable() {{
-      const table = document.getElementById("storeTable");
-      storeData.forEach(store => {{
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${{store.ivr_code}}</td>
-          <td>${{store.store_name}}</td>
-          <td><a href="${{store.store_url}}" target="_blank">Google Maps</a></td>
-          <td>${{store.review_count}}</td>
-        `;
-        table.appendChild(row);
-      }});
-    }}
+    // 載入 JSON 資料並顯示表格
+    fetch('store_list_with_reviews.json')
+      .then(response => response.json())
+      .then(data => {
+        storeData = data;
+        renderTable();
+      });
 
-    async function updateReviews() {{
-      for (let i = 0; i < storeData.length; i++) {{
-        const placeId = storeData[i].place_id;
-        const response = await fetch(`https://maps.googleapis.com/maps/api/place/details/json?place_id=${{placeId}}&fields=user_ratings_total&key=${{apiKey}}`);
-        const result = await response.json();
-        if (result.result && result.result.user_ratings_total !== undefined) {{
-          storeData[i].review_count = result.result.user_ratings_total;
-        }}
-      }}
+    function renderTable() {
       const table = document.getElementById("storeTable");
       table.innerHTML = `
         <tr>
@@ -84,23 +76,37 @@ html_content = f"""
           <th>評論數</th>
         </tr>
       `;
+      storeData.forEach(store => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${store.ivr_code}</td>
+          <td>${store.store_name}</td>
+          <td>${store.store_url}Google Maps</a></td>
+          <td>${store.review_count}</td>
+        `;
+        table.appendChild(row);
+      });
+    }
+
+    async function updateReviews() {
+      for (let i = 0; i < storeData.length; i++) {
+        const placeId = storeData[i].place_id;
+        const response = await fetch(`https://maps.googleapis.com/maps/api/place/details/json?place_id=${placeId}&fields=user_ratings_total&key=${apiKey}`);
+        const result = await response.json();
+        if (result.result && result.result.user_ratings_total !== undefined) {
+          storeData[i].review_count = result.result.user_ratings_total;
+        }
+      }
       renderTable();
       alert("評論數已更新！");
-    }}
+    }
 
-    function downloadReport() {{
+    function downloadReport() {
       const worksheet = XLSX.utils.json_to_sheet(storeData);
       const workbook = XLSX.utils.book_new();
       XLSX.utils.book_append_sheet(workbook, worksheet, "遠傳門市評論報表");
       XLSX.writeFile(workbook, "遠傳門市評論報表.xlsx");
-    }}
-
-    renderTable();
+    }
   </script>
 </body>
 </html>
-"""
-
-# Save the index.html file
-with open("index.html", "w", encoding="utf-8") as f:
-    f.write(html_content)
