--- a/index.html
+++ b/index.html
@@ -1,69 +1,46 @@
-
 <!DOCTYPE html>
-<html lang="zh-TW">
-<head>
-  <meta charset="UTF-8">
-  <title>遠傳加盟門市評論工具</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xsx.full.min.js</script>
+<html lang="zh>遠傳加盟門市評論工具</title><html lang="zh-TW">
+  https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js</script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    h1 {
-      color: #d32f2f;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    h1 { color: #d32f2f; }
     button {
-      margin: 10px 5px;
-      padding: 10px 20px;
-      background-color: #1976d2;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      margin: 10px 5px; padding: 10px 20px;
+      background-color: #1976d2; color: white;
+      border: none; border-radius: 5px; cursor: pointer;
     }
-    button:hover {
-      background-color: #1565c0;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-top: 20px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: center;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
+    button:hover { background-color: #1565c0; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background-color: #f2f2f2; }
+    #loading { color: #555; margin-top: 10px; }
   </style>
 </head>
 <body>
   <h1>遠傳加盟門市評論工具</h1>
   <button onclick="updateReviews()">更新評論數</button>
   <button onclick="downloadReport()">下載報表</button>
-
-  <table id="storeTable">
-    <tr>
-      <th>IVR Code</th>
-      <th>店組名稱</th>
-      <th>Google Maps</th>
-      <th>評論數</th>
-    </tr>
-  </table>
+  <div id="loading">資料載入中...</div>
+  <table id="storeTable"></table>
 
   <script>
     const apiKey = "AIzaSyBjCmx5gI49M1ik9K-KXBWp0Bdb9hGjHDQ";
     let storeData = [];
 
-    // 載入 JSON 資料並顯示表格
+    // 載入 JSON 資料
     fetch('store_list_with_reviews.json')
-      .then(response => response.json())
+      .then(response => {
+        if (!response.ok) throw new Error("JSON 載入失敗");
+        return response.json();
+      })
       .then(data => {
         storeData = data;
         renderTable();
+        document.getElementById("loading").style.display = "none";
+      })
+      .catch(error => {
+        document.getElementById("loading").innerText = "載入失敗：" + error.message;
+        console.error(error);
       });
 
     function renderTable() {
@@ -81,7 +58,7 @@
         row.innerHTML = `
           <td>${store.ivr_code}</td>
           <td>${store.store_name}</td>
-          <td>${store.store_url}Google Maps</a></td>
+          <td><a href="${store.storele Maps</a></td>
           <td>${store.review_count}</td>
         `;
         table.appendChild(row);
@@ -89,16 +66,21 @@
     }
 
     async function updateReviews() {
+      document.getElementById("loading").innerText = "評論數更新中...";
       for (let i = 0; i < storeData.length; i++) {
         const placeId = storeData[i].place_id;
-        const response = await fetch(`https://maps.googleapis.com/maps/api/place/details/json?place_id=${placeId}&fields=user_ratings_total&key=${apiKey}`);
-        const result = await response.json();
-        if (result.result && result.result.user_ratings_total !== undefined) {
-          storeData[i].review_count = result.result.user_ratings_total;
+        try {
+          const response = await fetch(`https://maps.googleapis.com/maps/api/place/details/json?place_id=${placeId}&fields=user_ratings_total&key=${apiKey}`);
+          const result = await response.json();
+          if (result.result && result.result.user_ratings_total !== undefined) {
+            storeData[i].review_count = result.result.user_ratings_total;
+          }
+        } catch (err) {
+          console.error("更新失敗", err);
         }
       }
       renderTable();
-      alert("評論數已更新！");
+      document.getElementById("loading").innerText = "評論數已更新！";
     }
 
     function downloadReport() {
@@ -110,3 +92,5 @@
   </script>
 </body>
 </html>
+<head>
+  <meta charset="UTF-8">
